# PhotoHelper

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/Applications/: CMakeLists.txt
src/Applications/PhotoHelperApp/: CMakeLists.txt  PhotoHelperApp.qrc  main.cpp  main.qml
src/Applications/PhotoHelperApp/resources/: PhotoHelperApp.qrc  qtquickcontrols2.conf
src/Applications/PhotoHelperApp/resources/qml/: main.qml
src/Applications/PhotoHelperApp/src/: Proxy.cpp  Proxy.h  main.cpp
src/Libs/: CMakeLists.txt
src/Libs/PhotoHelper/: CMakeLists.txt
src/Libs/PhotoHelper/include/PhotoHelper/: ConfigManager.h  DataLoader.h  DestinationFolderModel.h  FileOperationHandler.h  FolderSet.h  PhotoController.h  PhotoModel.h  Types.h
src/Libs/PhotoHelper/resources/: PhotoHelper.qrc
src/Libs/PhotoHelper/resources/PhotoHelper/: AllPhotoItem.qml  CustomButton.qml  CustomToggleButton.qml  InitialDialog.qml  MainWindow.qml  OnePhotoItem.qml  OnePhotoWindow.qml  SettingsDialog.qml  qmldir
src/Libs/PhotoHelper/src/: ConfigManager.cpp  DataLoader.cpp  DestinationFolderModel.cpp  FileOperationHandler.cpp  FolderSet.cpp  PhotoController.cpp  PhotoModel.cpp
